fixed head and whitespace, removed one element from 808 kit

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,15 @@
  .App {
      text-align: center;
      max-width: 100%;
-     height: 100vh;
+     min-height: 100vh;
      padding-top: 3rem;
+     position: relative;
+ }
+ 
+ @media (max-height: 480px) {
+     .App {
+         padding-top: 1rem;
+     }
  }
  
  .App_0 {
