--- a/src/components/styles/display.css
+++ b/src/components/styles/display.css
@@ -1,5 +1,5 @@
 .display {
-    padding: 30px;
+    padding: 0px;
 }
 
 .toggle_button {
