--- a/src/components/styles/head.css
+++ b/src/components/styles/head.css
@@ -1,1 +1,9 @@
-
+@media (max-height: 480px) {
+    .title {
+        margin: 0;
+        padding: 0;
+    }
+    .subtitle {
+        display: none;
+    }
+}
